2004-11-14  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*: Plug another few memleaks. All found by Angala Wrobel.

2004-11-12  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Clean up handling of MakerNote tags.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-mnote-data.c: Plug yet another memory leak.
	  Detected by Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-log.c: Plug another memory leak. Detected by 
	  Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/canon/exif-mnote-data-canon.c: Do not crash on strange
	  data. Pointed out by Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*: Replace another few realloc by exif_mem_realloc.
	  Pointed out by Angela Wrobel.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*.c: Change #include "" to #include <>.
	* Makefile.am:
	* exif-result.h: Removed.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.[c,h] (exif_tag_from_name): New. Suggested by
	  Angela Wrobel.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_free): Fix memleak found by 
	  Angela Wrobel.
	* contrib/watcom: Updated files contributed by Angela Wrobel.

2004-11-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-format.c: More translatable strings.

2004-11-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Detect more wrong stuff.
	* libexif/exif-data.c: Detect recursive calls.

2004-11-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: added LZW
	* libexif/exif-tag.*: added few tags used by .NEF
	* libexif/exif-data.c: logging unknown tags

2004-10-20  Lutz Mueller <lutz@users.sourceforge.net>

	* Makefile.am: Add intl
	* configure.in: Add intl/Makefile. Now "make distcheck" works.

2004-10-18  Lutz Mueller <lutz@users.sourceforge.net>
